--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ main {
 
 .hero-section {
   margin-top: 20px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("/images/background-image.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url("./images/background-image.jpg");
   background-size: 1400px;
   //width: 800px;
   height: 800px;
